# dFactory-Lab

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Checklist.md  Dockerfile  PACKAGING.md  README.md  RELEASES.md  SECURITY.md  lab.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  training_run.md
.github/workflows/: ci.yml
configs/model_configs/llada2_21_flash/: config.json
configs/model_configs/llada2_21_mini/: config.json
configs/sft/: llada2_21_flash_bd_sft.yaml  llada2_21_mini_256k_bd_sft.yaml  llada2_21_mini_bd_sft.yaml
docs/: RUNPOD.md
scripts/: build_checklist.py
server/: README.md  pyproject.toml  run.py
server/server/: __init__.py  auth.py  banner.py  db.py  hardware.py  jobs.py  logging_config.py  main.py  schemas.py  settings.py  subprocess_util.py
server/server/routes/: __init__.py  chat.py  datasets.py  export.py  models.py  pipeline.py  system.py  training.py
server/server/services/: __init__.py  audit.py  datasets.py  export.py  inference.py  models.py  moe.py  servers.py  training.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_chat.py  test_datasets.py  test_db.py  test_export.py  test_jobs.py  test_moe.py  test_servers.py  test_settings.py  test_training.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/scripts/: screenshot.mjs
web/src/: App.tsx  styles.css
web/src/components/: Layout.tsx  (+1 more)
(+11 files in other folders)
